--- a/SolucaoCapitulo01/Capitulo01/Views/Departamento/Create.cshtml
+++ b/SolucaoCapitulo01/Capitulo01/Views/Departamento/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model IES.Models.Instituicao
+﻿@model IES.Models.Departamento
 
 @{
     Layout = null;
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<h4>Instituição</h4>
+<h4>Departamento</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,11 +23,6 @@
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Endereco" class="control-label"></label>
-                <input asp-for="Endereco" class="form-control" />
-                <span asp-validation-for="Endereco" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-default" />
