--- a/SolucaoCapitulo01/Capitulo01/Views/Departamento/Delete.cshtml
+++ b/SolucaoCapitulo01/Capitulo01/Views/Departamento/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model IES.Models.Instituicao
+﻿@model IES.Models.Departamento
 
 @{
     Layout = null;
@@ -13,33 +13,21 @@
 </head>
 <body>
 
-<h3>Você tem certeza que deseja excluir essa instituição?</h3>
+<h3>Você tem certeza que deseja excluir esse departamento?</h3>
 <div>
-    <h4>Instituição</h4>
+    <h4>Departamento</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.InstituicaoID)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.InstituicaoID)
-        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Nome)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Nome)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Endereco)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Endereco)
-        </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="InstituicaoID" />
+        <input type="hidden" asp-for="DepartamentoID" />
         <input type="submit" value="Excluir" class="btn btn-default" /> |
         <a asp-action="Index">Voltar para lista</a>
     </form>
