--- a/SolucaoCapitulo01/Capitulo01/Views/Departamento/Edit.cshtml
+++ b/SolucaoCapitulo01/Capitulo01/Views/Departamento/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model IES.Models.Instituicao
+﻿@model IES.Models.Departamento
 
 @{
     Layout = null;
@@ -9,28 +9,24 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Criar</title>
+    <title>Editar</title>
 </head>
 <body>
 
-<h4>Instituição</h4>
+<h4>Departamento</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="DepartamentoID" />
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Endereco" class="control-label"></label>
-                <input asp-for="Endereco" class="form-control" />
-                <span asp-validation-for="Endereco" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </form>
     </div>
