--- a/IES/IES/Views/Departamento/Create.cshtml
+++ b/IES/IES/Views/Departamento/Create.cshtml
@@ -14,6 +14,12 @@
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="InstituicaoID" class="control-label"></label>
+                <select asp-for="InstituicaoID" class="form-control"
+                        asp-items="@(new SelectList(@ViewBag.Instituicoes, "InstituicaoID", "Nome"))">
+                </select>
+            </div>
             <div class="form-group text-center h3">
                 <input type="submit" value="Registrar Departamento" class="btn btn-light" />
                 <a asp-action="Index" class="btn btn-info">Retornar à listagem de departamentos</a>
