--- a/IES/IES/Views/Departamento/Delete.cshtml
+++ b/IES/IES/Views/Departamento/Delete.cshtml
@@ -1,15 +1,18 @@
 ﻿@model IES.Models.Departamento
 @{
-    Layout = "~/Views/Shared/_LayoutIES.cshtml";
+    Layout = "_LayoutIES";
 }
 @section styles {
 <link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.min.css" />
 }
 <div class="card-block">
-    <div class="card-header text-white bg-secondary text-center h1">Exibindo um departamento existente</div>
+    <div class="card-header text-white bg-secondary text-center h1">
+        Exibindo uma departamento para remoção
+    </div>
     <div class="card-body">
         <div class="form-group">
-            <label asp-for="DepartamentoID" class="control-label"></label><br />
+            <label asp-for="DepartamentoID" class="control-label"></label>
+            <br />
             <div class="input-group">
                 <div class="input-group-prepend">
                     <span class="input-group-text">
@@ -18,6 +21,7 @@
                 </div>
                 <input asp-for="DepartamentoID" class="form-control" disabled="disabled" />
             </div>
+
             <label asp-for="Nome" class="control-label"></label>
             <br />
             <div class="input-group">
@@ -28,18 +32,54 @@
                 </div>
                 <input asp-for="Nome" class="form-control" disabled="disabled" />
             </div>
+
+            <label asp-for="Instituicao.Nome" class="control-label"></label>
+            <br />
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">
+                        <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <input asp-for="Instituicao.Nome" class="form-control" disabled="disabled" />
+            </div>
         </div>
     </div>
     <div class="card-footer bg-info text-center text-white">
-        <form asp-action="Delete">
-            <input type="hidden" asp-for="DepartamentoID" />
-            <input type="submit" value="Remover Departamento" class="btn btn-light" />
-            <a asp-action="Index" class="btn btn-info">Retornar à listagem de departamentos</a>
-        </form>
+        <a asp-action="Index" class="btn btn-danger">
+            Retornar à listagem de Departamentos
+        </a>
+        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#modalConfirmationDelete">
+            Remover Departamento
+        </button>
     </div>
 </div>
-@section ScriptPage {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
+<div class="modal fade" id="modalConfirmationDelete" tabindex="-1"
+     role="dialog" aria-labelledby="deleteModal" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModal">
+                    Remoçãode Departamento
+                </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>
+                    Confirma a exclusão do departamento @Model.Nome.ToUpper() ??
+                </p>
+            </div>
+            <div class="modal-footer">
+                <form asp-action="Delete">
+                    <input type="hidden" asp-for="DepartamentoID" />
+                    <input type="submit" value="Remover Departamento" class="btn btn-primary" />
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        Fechar
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
