--- a/IES/IES/Views/Departamento/Index.cshtml
+++ b/IES/IES/Views/Departamento/Index.cshtml
@@ -27,6 +27,9 @@
                         @Html.DisplayNameFor(model => model.Nome)
                     </th>
                     <th>
+                        @Html.DisplayNameFor(model => model.Instituicao.Nome)
+                    </th>
+                    <th>
 
                     </th>
                 </tr>
@@ -40,6 +43,9 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Nome)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Instituicao.Nome)
                         </td>
                         <td>
                             <a asp-action="Edit" asp-route-id="@item.DepartamentoID">Edit</a> |
