Adicinoa os exemplos do capítulo seis

--- a/IES/IES/Views/Instituicao/Index.cshtml
+++ b/IES/IES/Views/Instituicao/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<IES.Models.Instituicao>
+﻿@model IEnumerable<Modelo.Cadastros.Instituicao>
 @{
     Layout = "~/Views/Shared/_LayoutIES.cshtml";
 }
