--- a/IES/IES/Views/Departamento/Index.cshtml
+++ b/IES/IES/Views/Departamento/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<IES.Models.Departamento>
+﻿@model IEnumerable<Modelo.Cadastros.Departamento>
 @{
     Layout = "~/Views/Shared/_LayoutIES.cshtml";
 }
