--- a/IES/IES/Views/Instituicao/_ComDepartamentos.cshtml
+++ b/IES/IES/Views/Instituicao/_ComDepartamentos.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<IES.Models.Departamento>
+﻿@model IEnumerable<Modelo.Cadastros.Departamento>
 
 <div class="card-block">
     <div class="card-header text-white badge-warning text-center">Departamentos Registrados na Instituição</div>
