--- a/IES/IES/Areas/Discente/Views/Academico/Delete.cshtml
+++ b/IES/IES/Areas/Discente/Views/Academico/Delete.cshtml
@@ -7,12 +7,12 @@
 }
 <div class="card-block">
     <div class="card-header text-white bg-secondary text-center h1">Exibindo um acadêmico existente</div>
-    @await Html.PartialAsync("~/Views/Academico/_PartialDetailsContentCard.cshtml", Model)
+    @await Html.PartialAsync("~/Areas/Discente/Views/Academico/_PartialDetailsContentCard.cshtml", Model)
     <div class="card-footer bg-info text-center text-white">
         <form asp-action="Delete">
             <input type="hidden" asp-for="AcademicoID" />
             <input type="submit" value="Remover Acadêmico" class="btn btn-light" />
-            <a asp-action="Index" class="btn btn-info">Retornar à listagem de acadêmicos</a>
+            <a asp-action="Index" asp-area="Discente" class="btn btn-info">Retornar à listagem de acadêmicos</a>
         </form>
     </div>
 </div>
