--- a/IES/IES/Areas/Cadastros/Views/Departamento/Create.cshtml
+++ b/IES/IES/Areas/Cadastros/Views/Departamento/Create.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group text-center h3">
                 <input type="submit" value="Registrar Departamento" class="btn btn-light" />
-                <a asp-action="Index" class="btn btn-info">Retornar à listagem de departamentos</a>
+                <a asp-action="Index" asp-area="Cadastros" class="btn btn-info">Retornar à listagem de departamentos</a>
             </div>
         </form>
     </div>
