--- a/IES/IES/Areas/Cadastros/Views/Departamento/Index.cshtml
+++ b/IES/IES/Areas/Cadastros/Views/Departamento/Index.cshtml
@@ -48,9 +48,9 @@
                             @Html.DisplayFor(modelItem => item.Instituicao.Nome)
                         </td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@item.DepartamentoID">Edit</a> |
-                            <a asp-action="Details" asp-route-id="@item.DepartamentoID">Details</a> |
-                            <a asp-action="Delete" asp-route-id="@item.DepartamentoID">Delete</a>
+                            <a asp-action="Edit" asp-area="Cadastros" asp-route-id="@item.DepartamentoID">Edit</a> |
+                            <a asp-action="Details" asp-area="Cadastros" asp-route-id="@item.DepartamentoID">Details</a> |
+                            <a asp-action="Delete" asp-area="Cadastros" asp-route-id="@item.DepartamentoID">Delete</a>
                         </td>
                     </tr>
                 }
@@ -58,7 +58,7 @@
         </table>
     </div>
     <div class="card-footer bg-success text-center">
-        <a asp-action="Create" class="btn-success">Criar um novo departamento</a>
+        <a asp-action="Create" asp-area="Cadastros" class="btn-success">Criar um novo departamento</a>
     </div>
 </div>
 @section ScriptPage {
