--- a/IES/IES/Areas/Cadastros/Views/Instituicao/Create.cshtml
+++ b/IES/IES/Areas/Cadastros/Views/Instituicao/Create.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group text-center h3">
                 <input type="submit" value="Registrar Instituição" class="btn btn-light" />
-                <a asp-action="Index" class="btn btn-info">Retornar à listagem de instituições</a>
+                <a asp-action="Index" asp-area="Cadastros" class="btn btn-info">Retornar à listagem de instituições</a>
             </div>
         </form>
     </div>
