--- a/IES/IES/Areas/Cadastros/Views/Instituicao/Delete.cshtml
+++ b/IES/IES/Areas/Cadastros/Views/Instituicao/Delete.cshtml
@@ -7,14 +7,12 @@
 }
 <div class="card-block">
     <div class="card-header text-white bg-secondary text-center h1">Exibindo uma instituição existente</div>
-    @{
-        await Html.PartialAsync("~/Views/Instituicao/_PartialDetailsContentCard.cshtml", Model);
-    }
+    @await Html.PartialAsync("~/Areas/Cadastros/Views/Instituicao/_PartialDetailsContentCard.cshtml", Model)
     <div class="card-footer bg-info text-center text-white">
         <form asp-action="Delete">
             <input type="hidden" asp-for="InstituicaoID" />
             <input type="submit" value="Remover Instituição" class="btn btn-light" />
-            <a asp-action="Index" class="btn btn-info">Retornar à listagem de instituições</a>
+            <a asp-action="Index" asp-area="Cadastros" class="btn btn-info">Retornar à listagem de instituições</a>
         </form>
     </div>
 </div>
