--- a/IES/IES/Areas/Discente/Views/Academico/Create.cshtml
+++ b/IES/IES/Areas/Discente/Views/Academico/Create.cshtml
@@ -1,12 +1,13 @@
 ﻿@model Modelo.Discente.Academico
+
 @{
-    Layout = "~/Views/Shared/_LayoutIES.cshtml";
+    Layout = "_LayoutIES";
 }
+
 <div class="card-block">
-    <div class="card-header text-white bg-secondary text-center h1">Alterando um acadêmico existente</div>
+    <div class="card-header text-white bg-danger text-center h1">Registrando um novo acadêmico</div>
     <div class="card-body">
-        <form asp-action="Edit">
-            <input type="hidden" asp-for="AcademicoID" />
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="RegistroAcademico" class="control-label"></label>
@@ -24,12 +25,12 @@
                 <span asp-validation-for="Nascimento" class="text-danger"></span>
             </div>
             <div class="form-group text-center h3">
-                <input type="submit" value="Atualizar Acadêmico" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-warning">Retornar à listagem de acadêmicos</a>
+                <input type="submit" value="Registrar Acadêmico" class="btn btn-light" />
+                <a asp-action="Index" asp-area="Discente" class="btn btn-info">Retornar à listagem de acadêmicos</a>
             </div>
         </form>
     </div>
-    <div class="card-footer bg-info text-center text-white">
+    <div class="card-footer bg-dark text-center text-white">
         Informe os dados acima e/ou clique em um dos botões de ação
     </div>
 </div>
